--- a/src/layouts/components/sections/HomeBanner.astro
+++ b/src/layouts/components/sections/HomeBanner.astro
@@ -68,7 +68,7 @@ const background = "/images/hero/background.jpg";
         data-aos-delay="400"
         data-aos-duration="900"
         class="flex flex-wrap items-center justify-center gap-5">
-        {button && <ButtonLink content={button} class="btn-pricing-dark" />}
+        {button && <ButtonLink content={button} variant="primary" />}
       </div>
     </div>
   </div>
